--- a/www/public/css/contact-styles.css
+++ b/www/public/css/contact-styles.css
@@ -13,6 +13,7 @@ header {
 
 .wrapper {
     display: flex;
+    flex-direction: row;
 }
 
 .user-name {
@@ -31,13 +32,20 @@ header {
 
 #sidebar {
     height: 100vh;
-    width: 0;
+    width: 250px;
     background-color: #111;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 60px;
     position: fixed;
     z-index: 1;
+    top: 0;
+    left: 0;
+    transform: translateX(-250px);
+}
+
+#sidebar.open {
+    transform: translateX(0);
 }
 
 #sidebar a {
@@ -45,8 +53,7 @@ header {
     text-decoration: none;
     font-size: 20px;
     color: #818181;
-    display: flex;
-    align-items: center;
+    display: block;
     transition: 0.3s;
 }
 
@@ -54,7 +61,7 @@ header {
     color: #f1f1f1;
 }
 
-#sidebar .menu-icon {
+#menuIcon {
     font-size: 30px;
     position: fixed;
     top: 20px;
@@ -64,44 +71,14 @@ header {
     color: white;
 }
 
-#sidebar .logout-icon {
-    font-size: 20px;
-    position: absolute;
-    bottom: 20px;
-    left: 20px;
-    cursor: pointer;
-    color: #818181;
-}
-
-#sidebar .profile-icon {
-    font-size: 20px;
-    position: absolute;
-    bottom: 60px;
-    left: 20px;
-    cursor: pointer;
-    color: #818181;
-}
-
-#userDisplay {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin-top: 20px;
-}
-
-#avatar {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin-bottom: 10px;
-}
-
 main {
     flex-grow: 1;
     padding: 20px;
-    margin-left: 0;
     transition: margin-left 0.5s;
+}
+
+.wrapper.shifted main {
+    margin-left: 250px;
 }
 
 #contact {
@@ -120,21 +97,22 @@ footer {
 }
 
 @media (max-width: 768px) {
-    #sidebar a {
-        padding: 15px;
-        font-size: 18px;
+    #sidebar {
+        width: 0;
+        height: 100%;
+        padding-top: 60px;
     }
 
-    #sidebar {
-        padding-top: 15px;
+    #sidebar.open {
+        width: 250px;
+    }
+
+    .wrapper.shifted main {
+        margin-left: 0px;
     }
 
     main {
-        padding: 10px;
+        padding: 20px;
         margin-left: 0;
-    }
-
-    #sidebar .menu-icon {
-        left: 15px;
     }
 }
